# espetos-llm-bot

./: .gitignore  README.md  docker-compose.yaml  main.py  main_test.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: agent.py  gemini_agent_imp.py  instruction_template.py
core/: deps.py  settings.py
data_ingest/: data_ingest.py
data_ingestor/: __init__.py  data_ingestor.py  data_ingestor_imp.py  mariadb_data_ingestor.py  notion_data_ingestor.py  smartpos_data_ingestor.py
docs/: AIREADY.md
handlers/: database_data_handler.py  metadata_handler.py
messenger/: telegram_messenger.py
messengers/: __init__.py
models/: agent_models.py  models.py
oracle/: main.py
oracle/my_chroma_db/: chroma.sqlite3
rag/: rag.py  rag_imp.py  rag_mariadb_imp.py
routers/: health.py  webhooks.py
services/: knowledge_service.py  telegram_service.py  user_request_service.py
tests/: test_main.py
utils/: __init__.py
utils/handlers/: metadata_handler.py  to_agnodoc_handler.py
utils/tools/: log_tool.py
