[project]
name = "espetos-llm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.4",
    "chromadb>=1.0.15",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.26.0",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.0",
    "mariadb>=1.1.0",
    "redis>=6.2.0",
    "python-telegram-bot>=22.3",
]
