[project]
name = "espetos-llm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.4",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.26.0",
    "uvicorn>=0.35.0",
    "redis>=6.2.0",
    "python-telegram-bot>=22.3",
    "pyngrok>=7.2.12",
    "pymupdf>=1.26.3",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "openai>=1.99.6",
    "pypdf>=5.9.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "chonkie>=1.1.2",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
    "ruff>=0.5.5",
]
